Edited some basic content

--- a/GUMAD_CTF/CTF/templates/Registration/registrationForm.html
+++ b/GUMAD_CTF/CTF/templates/Registration/registrationForm.html
@@ -8,7 +8,7 @@
 
     <h5>Team Registration</h5>
     <p>Note: If you don't see your institution, you may add it <a href="/Registration/RegisterInstitution">here.</a></p>
-
+    <p>Note: There are two different leagues depending on your teams level of expertise, <b>Canary </b> and <b>Swallow</b>. The more experienced players should enrole in the Swallow league, while the people new to the field should sign up for Canary. There is more on the distiction between the two leagues on the rules section of the web site. 
     <h5>Team Info</h5>
     {{ formTeam }}
 
