--- a/GUMAD_CTF/CTF/templates/Registration/index.html
+++ b/GUMAD_CTF/CTF/templates/Registration/index.html
@@ -8,6 +8,7 @@
 
 <h3>General</h3>
 <ul>
+    <li>Date: February 9th, 2018</li>
     <li>Location: Gonzaga University School of Engineering and Applied Science.</li>
     <li>Teams of 1-3. If there are two freshman on the team, then a team is allowed
         5 members. Freshman are highly encouraged because we want them to come and learn!</li>
