Added sponsors page

--- a/GUMAD_CTF/CTF/templates/CTF/index.html
+++ b/GUMAD_CTF/CTF/templates/CTF/index.html
@@ -13,7 +13,9 @@
 <p>
     The final question is <i>'who is invited?''</i> Even though you are probably thinking <i>cyber security is much too difficult for me</i>, 1) cybersecurity is not as hard as you think, 2) this is a learning experience! The goal of the competition is to <b>learn and prosper</b>, not to assemble the greatest hackers of all time. There will be people on staff ready to help all contestants during the competition. We are bringing in security professionals from <b> Risk Lens, Intrinium and the Spokane Security Collation </b> to come help out during the contest.
 </p>
-
+<p>
+    Finally, the reason this is the <i>Spokane Mayor's Cyber Cup</i> is because the mayor of Spokane has approved this as the official cybersecurity competition of Spokane,WA.
+</p>
 <h3>
 Perks
 </h3>
