--- a/GUMAD_CTF/CTF/templates/Registration/index.html
+++ b/GUMAD_CTF/CTF/templates/Registration/index.html
@@ -10,8 +10,8 @@
 <ul>
     <li>Date: February 9th, 2018</li>
     <li>Location: Gonzaga University School of Engineering and Applied Science.</li>
-    <li>Teams of 1-3. If there are two freshman on the team, then a team is allowed
-        5 members. Freshman are highly encouraged because we want them to come and learn!</li>
+    <li>Teams of 1-3, mainly. If there is a freshman or sophomore on the team, then they are allowed
+        5 members. Freshman and sophomores are highly encouraged because we want them to come and learn!</li>
     <li>Slack channel for teams to communicate.</li>
     <li>Time estimate: 5 hours. </li>
     <li>There are two types of challenges. Read on!</li>
